Added subscribed wallpaper previews on frontend

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
     <h1>PaperChanger</h1>
     <div class="panels_container">
       <div class="left_panel">
-        <input id="greet-input" placeholder="Search" />
-        <button id="greet-btn" type="button">Filter</button>
+        <input id="search-input" placeholder="Search" />
+        <button id="filter-btn" type="button">Filter</button>
         <button id="update-btn" type="button">update</button>
 
         <p id="greet-msg"></p>
@@ -24,6 +24,7 @@
       </div>
       <div style="background:orange;" class="right_panel">
         <p>Right Panel</p>
+        <img src="http://via.placeholder.com/200x200" alt="" />
       </div>
     </div>
   </div>
