Wallpapers are now properly shown and selectable

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 
         <div id="wallpapers"></div>
       </div>
-      <div style="background:orange;" class="right_panel">
-        <p>Right Panel</p>
-        <img src="http://via.placeholder.com/200x200" alt="" />
+      <div class="right_panel">
+        <img class="selected-paper-img" src="http://via.placeholder.com/200x200" alt="" />
+        <h2 class="selected-paper-title">Title</h2>
       </div>
     </div>
   </div>
